# promptctl-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.md
docs/: api.md  requirements.md
src/: error.rs  lib.rs  main.rs  ui.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  generate.rs  mod.rs
src/config/: mod.rs  paths.rs
src/prompt/: mod.rs
src/providers/: claude.rs  mod.rs  web_claude.rs
src/utils/: mod.rs
