[package]
name = "promptctl"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for generating and improving AI prompts using Claude"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/promptctl"
keywords = ["ai", "claude", "prompt-engineering", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "pctl"
path = "src/main.rs"

[dependencies]
terminal_size = "0.3.0"
textwrap = "0.16.0"
spinners = "4.1.0"
anyhow = "1.0"
arboard = "3.3"
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
config = "0.14"
dialoguer = "0.11.0"
dirs = "5.0"
open = "5.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1"
